--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   path_provider: ^2.0.14
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
