--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: mobile
-description: A new Flutter project.
+name: imajigle
+description: an app for generating random images.
 publish_to: 'none'
 version: 0.1.0
 
